Fix white space below map

--- a/django_project/feti/static/feti/css/landing-page.css
+++ b/django_project/feti/static/feti/css/landing-page.css
@@ -462,9 +462,13 @@
     padding: 15px 20px 0px 20px;
     font-weight: 500;
     width: 100%;
+    height: 45px;
+    position: absolute;
 }
 
 #result-filter-data {
+    position: absolute;
+    margin-top: 60px;
     background: white !important;
     color: rgba(29, 104, 179, 1);
     font-size: 18px;
